--- a/css/style1.css
+++ b/css/style1.css
@@ -259,7 +259,7 @@ input[type=number] {
     border: 1px solid white;
     border-radius: 10px;
     box-sizing: border-box;
-    color: white;
+    color: black;
 }
 
 .message {
